--- a/templates/login.html
+++ b/templates/login.html
@@ -10,16 +10,25 @@
         <!-- This is where our form will go. -->
 
 				<form method="POST" action="{{ url_for('login') }}">
-						{{ form.csrf_token }}
+							{{ form.csrf_token }}
 						<p>
-						{{ form.name.label }} <br>{{ form.name(size=20) }}
+							{{ form.name.label }} <br>{{ form.name(size=20) }}
 					  </p>
-						{{ form.email.label }} <br> {{ form.email(size=20) }}
+							{{ form.email.label }} <br> {{ form.email(size=20) }}
+							{{ form.email.errors }}
+							{% for err in form.email.errors %}
+							<span style="color:red">{{ err }}</span>
+							{% endfor %}
 						<p>
-						{{ form.password.label }} <br> {{ form.password(size=20) }}
+							{{ form.password.label }} <br> {{ form.password(size=20) }}
+							{{ form.password.errors }}
+							{% for err in form.password.errors %}
+							<span style="color:red">{{ err }}</span>
+							{% endfor %}
 						</p>
 
-						{{ form.submit }}
+							{{ form.submit }}
+						
 						<input type="submit" value="Log In">
 				
 				</form>
