--- a/templates/login.html
+++ b/templates/login.html
@@ -11,9 +11,7 @@
 
 				<form method="POST" action="{{ url_for('login') }}" novalidate>
 							{{ form.csrf_token }}
-						<p>
-							{{ form.name.label }} <br>{{ form.name(size=20) }}
-					  </p>
+						
 							{{ form.email.label }} <br> {{ form.email(size=20) }}
 							<!-- {{ form.email.errors }} -->
 							{% for err in form.email.errors %}
@@ -27,7 +25,7 @@
 							{% endfor %}
 						</p>
 
-							{{ form.submit }}
+							<!-- {{ form.submit }} -->
 						
 						<input type="submit" value="Log In">
 				
