--- a/templates/login.html
+++ b/templates/login.html
@@ -25,9 +25,9 @@
 							{% endfor %}
 						</p>
 
-							<!-- {{ form.submit }} -->
+							{{ form.submit }}
 						
-						<input type="submit" value="Log In">
+						<!-- <input type="submit" value="Log In"> -->
 				
 				</form>
 
