--- a/templates/denied.html
+++ b/templates/denied.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 {% block title %}Access Denied{% endblock %}
+{% block styling %}
+	{‌{ super() }}
+	<style>
+	h1 {
+		color:red;
+	}
+	</style>
+{% endblock %}
+
 {% block content %}
 
 	<div class="container">
