--- a/templates/denied.html
+++ b/templates/denied.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Access Denied{% endblock %}
 {% block styling %}
-	{‌{ super() }}
-	<style>
+{{ super() }}
+
 	h1 {
 		color:red;
 	}
-	</style>
+	
 {% endblock %}
-
 {% block content %}
 
 	<div class="container">
