--- a/templates/success.html
+++ b/templates/success.html
@@ -2,7 +2,13 @@
 	{% extends "base.html" %}
 	
 	{% block title %}Success{% endblock %}
-	
+	{% block styling%}
+	{{ super() }}
+		h1 {
+			color:red;
+		}
+
+	{% endblock %}
 	{% block content %}
 		 <div class="container">
 				<h1>Top Secret </h1>
