--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <head>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>{% block title %}{% endblock %}</title>
     
         
@@ -11,6 +13,7 @@
     body{
         background: purple;
         }
+        {{ bootstrap.load_css() }}
     {% endblock %}
     </style>
     
@@ -19,5 +22,7 @@
 
 <body>
     {% block content %}{% endblock %}
+
+{{ bootstrap.load_js() }}
 </body>
 </html>
