--- a/templates/base.html
+++ b/templates/base.html
@@ -2,27 +2,30 @@
 <html lang="en">
 <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% block head %}
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
     <title>{% block title %}{% endblock %}</title>
     
-        
-    <style>
-    {% block styling %}
-    body{
-        background: purple;
-        }
-        {{ bootstrap.load_css() }}
-    {% endblock %}
-    </style>
-    
 
+        {% block styling %}
+        <!-- Bootstrap CSS -->
+            {{ bootstrap.load_css() }}
+        {% endblock %}
+
+    {% endblock %}
 </head>
 
 <body>
     {% block content %}{% endblock %}
 
-{{ bootstrap.load_js() }}
+
+    {% block scripts %}
+    <!-- Optional JavaScript -->
+        {{ bootstrap.load_js() }}
+    {% endblock %}
 </body>
 </html>
