--- a/templates/login.html
+++ b/templates/login.html
@@ -1,37 +1,30 @@
-<!DOCTYPE HTML>
+{% extends "base.html" %}
+{% from 'bootstrap4/form.html' import render_form %}
+		{% block title %}Login{% endblock %}
 
-<html>
-	<head>
-		<title>Login</title>
-	</head>
-	<body>
-        <div class="container">
+		{% block content %}
+		<div class="container">
 		<h1>Login</h1>
-        <!-- This is where our form will go. -->
-
-				<form method="POST" action="{{ url_for('login') }}" novalidate>
+        
+		{‌{ render_form(form) }}
+				<!-- <form method="POST" action="{{ url_for('login') }}" novalidate>
 							{{ form.csrf_token }}
 						
 							{{ form.email.label }} <br> {{ form.email(size=20) }}
-							<!-- {{ form.email.errors }} -->
+							
 							{% for err in form.email.errors %}
 							<span style="color:red">{{ err }}</span>
 							{% endfor %}
 						<p>
 							{{ form.password.label }} <br> {{ form.password(size=20) }}
-							<!-- {{ form.password.errors }} -->
+							
 							{% for err in form.password.errors %}
 							<span style="color:red">{{ err }}</span>
 							{% endfor %}
 						</p>
 
 							{{ form.submit }}
+					</form> -->
 						
-						<!-- <input type="submit" value="Log In"> -->
-				
-				</form>
-
-
-        </div>
-	</body>
-</html>
+				</div>
+				{% endblock %}
