--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,13 @@
     {% block content %}{% endblock %}
 
 
+   
+</body>
+
+<script>
     {% block scripts %}
     <!-- Optional JavaScript -->
-        {{ bootstrap.load_js() }}
+    {{ bootstrap.load_js() }}
     {% endblock %}
-</body>
+</script>
 </html>
