--- a/templates/login2.html
+++ b/templates/login2.html
@@ -1,3 +1,13 @@
-{% from 'bootstrap4/form.html' import render_form %}
+{% import 'bootstrap5/form.html' as bfwtf %}
+{% extends "base.html" %}
+{% block title %}Login{% endblock %}
 
-{{ render_form(form) }}
+{% block content %}
+<div class="container">
+  <h1>Login</h1>
+
+<div>
+{{ bfwtf.render_form(form) }}
+</div>
+
+{% endblock %}
